# comp23hw

.github/: CODEOWNERS
WinML/: .ocamlinit  dune-project  winml.opam
WinML/lib/: dune  inferencer.ml  lexer.mll  parse.ml  parsed_tree.ml  parsed_tree.mli  parser.mly  types.ml  util.ml  util.mli
WinML/lib/parser/: parsed_tree.ml
WinML/test/: dune  parser_factorial_test.ml  parser_factorial_test.t
